# J3K_Project

./: .clang-format  .gitignore  CMakeLists.txt  J3KSoulNight.cpp  LICENSE  README.md  character.h  class_diagram.drawio  entity.cpp  entity.h  game.h  main.cpp  player.h  render.h  screen.h  skill.cpp  skill.h  t.cpp  test.cpp
Game/: game.h
include/: BattlePhase.hpp  Collision.hpp  DialogueBox.hpp  Dungeon.hpp  Entity.hpp  Game.hpp  Inventory.hpp  Item.hpp  Iventory.hpp  Player.hpp  Skill.hpp  SlotIem.hpp  Story.hpp  character.h  game.h  render.h
include/Dungeon/: BattlePhase.hpp  Dungeon.hpp
include/Entity/: Entity.hpp  Inventory.hpp  Item.hpp  Player.hpp  Skill.hpp  SlotIem.hpp
include/Enum/: Direction.hpp  Interact.hpp  Room.hpp
include/Game/: Collision.hpp  Game.hpp  Story.hpp
include/Struct/: CollisionManager.hpp  Interactable.hpp  Volume.hpp
include/UI/: Bar.hpp  Introduction.hpp  Text.hpp  UI.hpp
include/UI/Popup/: CharacterInfo.hpp  Choice.hpp  DialogueBox.hpp  Popup.hpp  Upgrade.hpp
src/: BattlePhase.cpp  Collision.cpp  CollisionManager.cpp  DialogueBox.cpp  Dungeon.cpp  Entity.cpp  Game.cpp  Introduction.cpp  Inventory.cpp  Iventory.cpp  Player.cpp  Skill.cpp  Story.cpp  main.cpp
src/Dungeon/: BattlePhase.cpp  Dungeon.cpp
src/Entity/: Entity.cpp  Inventory.cpp  Player.cpp  Skill.cpp
src/Game/: Collision.cpp  Game.cpp  Story.cpp
src/UI/: Bar.cpp  Text.cpp  UI.cpp
src/UI/Popup/: CharacterInfo.cpp  Choice.cpp  DialogueBox.cpp  Popup.cpp  Upgrade.cpp
